<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/com.hb4u.myhealthmanager01_beta">
    <item
        android:id="@+id/item_scan_code"
        android:title="@string/menu_scancode_text"
        android:titleCondensed="item_scan_code"
        app:showAction="never"></item>
    <item
        android:id="@+id/itemCheckStatistics"
        android:title="@string/menu_checkstatistics_text"
        android:titleCondensed="item_check_statistics"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/itemSettings"
        android:title="@string/menu_settings_text"
        android:titleCondensed="item_settings"
        app:showAction="never"></item>
    <item
        android:id="@+id/itemAbout"
        android:title="@string/menu_about_text"
        android:titleCondensed="itemabout"
        app:showAction="never"></item>
    <item
        android:id="@+id/itemPremium"
        android:title="@string/menu_getpremium_text"
        android:titleCondensed="item_getpremium"
        app:showAction="never"></item>
    <item
        android:id="@+id/itemDemoMode"
        android:title="Demo Mode"
        android:titleCondensed="item_demo_mode"
        app:showAction="never"></item>
</menu>