<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:label="@string/app_title"
    android:layout_centerHorizontal="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.hb4u.myhealthmanagerver01_beta.Login">

    <TextView android:id="@+id/lblVersion"
        android:text="@string/app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView android:id="@+id/lblLogIn"
        android:text="@string/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblVersion"
        android:layout_alignParentStart="true"
        android:layout_marginTop="58dp" />

    <EditText android:id="@+id/txtUserName"
        android:background="@drawable/textfieldbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="73dp"
        android:layout_marginStart="24dp"
        android:layout_below="@+id/lblLogIn"
        android:layout_toEndOf="@+id/lblUserName" />

    <TextView android:id="@+id/lblUserName"
        android:text="@string/username_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtUserName"
        android:layout_alignBottom="@+id/txtUserName"
        android:layout_alignParentStart="true" />

    <TextView android:id="@+id/lblPassWord"
        android:text="@string/password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtUserName"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <EditText android:id="@+id/txtPassWord"
        android:background="@drawable/textfieldbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_alignTop="@+id/lblPassWord"
        android:layout_alignStart="@+id/txtUserName" />

    <Button android:id="@+id/btnLogIn"
        android:text="@string/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="59dp"
        android:layout_below="@+id/txtPassWord"
        android:layout_centerHorizontal="true"
        android:onClick="btnLogIn_Click"/>

    <TextView android:id="@+id/txtForgotPassword"
        android:text="@string/forgotpassword_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/txtPassWord"
        android:layout_alignParentStart="true" />

    <TextView android:id="@+id/txtForgotUsername"
        android:text="@string/forgotusername_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txtForgotPassword"
        android:layout_toEndOf="@+id/txtForgotPassword"
        android:layout_marginStart="37dp" />

    <ImageView android:id="@+id/imgUserProfilePic"
        android:layout_width="110dp"
        android:layout_height="110dp"
        app:srcCompat="@drawable/defaultprofilepic"
        android:layout_above="@+id/lblUserName"
        android:layout_alignEnd="@+id/btnLogIn"
        android:layout_marginBottom="18dp" />

</RelativeLayout>
