<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_statistics_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hb4u.myhealthmanagerver01_beta.activity_statistics_home">


    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/defaultprofilepic"
        android:id="@+id/imageView"
        android:layout_below="@+id/lblHello"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/sugarText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:id="@+id/lblSugar"
        android:layout_marginBottom="52dp"
        android:layout_alignParentBottom="true" />

    <ProgressBar
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="30dp"
        android:max="100"
        android:progressDrawable="@drawable/progress_drawable"
        android:layout_height="170dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="14dp"
        android:layout_above="@+id/lblSugar"
        android:layout_alignEnd="@+id/lblSugar"
        android:id="@+id/ProgressBarSugar"/>

    <ProgressBar
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="30dp"
        android:layout_height="170dp"
        android:max="100"
        android:layout_marginBottom="13dp"
        android:layout_marginLeft="6dp"
        android:progressDrawable="@drawable/progress_drawable"
        android:id="@+id/ProgressBarFat"
        android:layout_above="@+id/lblFat"
        android:layout_alignStart="@+id/lblFat" />

    <ProgressBar
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="30dp"
        android:layout_height="170dp"
        android:max="100"
        android:progressDrawable="@drawable/progress_drawable"
        android:id="@+id/ProgressBarSaturatedFat"
        android:layout_marginEnd="28dp"
        android:layout_alignTop="@+id/ProgressBarFat"
        android:layout_alignEnd="@+id/imageView" />

    <ProgressBar
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="30dp"
        android:layout_height="170dp"
        android:max="100"
        android:progressDrawable="@drawable/progress_drawable"
        android:id="@+id/ProgressBarSodium"
        android:layout_alignTop="@+id/ProgressBarSugar"
        android:layout_toEndOf="@+id/ProgressBarSaturatedFat"
        android:layout_marginStart="13dp" />

    <TextView
        android:text="@string/sodiumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblSodium"
        android:layout_alignBaseline="@+id/lblSaturatedFat"
        android:layout_alignBottom="@+id/lblSaturatedFat"
        android:layout_alignStart="@+id/ProgressBarSodium" />

    <TextView
        android:text="@string/saturatedFatText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblSaturatedFat"
        android:layout_below="@+id/ProgressBarFat"
        android:layout_alignEnd="@+id/imageView" />

    <TextView
        android:text="@string/fatText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblFat"
        android:layout_alignBaseline="@+id/lblSugar"
        android:layout_alignBottom="@+id/lblSugar"
        android:layout_alignStart="@+id/imageView"
        android:layout_marginStart="13dp" />

    <TextView
        android:text="@string/helloText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblHello"
        android:textSize="40dp"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/ProgressBarFat" />

</RelativeLayout>
